Update subtitle text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h1 class="title">
                     <span class="title-line">One interface. Many models.</span>
                 </h1>
-                <p class="subtitle">Access the world's most powerful AI models through a single, elegant interface.</p>
+                <p class="subtitle">Access a variety of powerful AI models through a single interface.</p>
             </section>
 
             <!-- Prompt interface -->
