Unique icons per company: Alibaba=square, Moonshot=star

--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
                                 </div>
                                 <div class="dropdown-section">
                                     <span class="section-label">Alibaba</span>
-                                    <button class="option" data-value="qwen3-32b" data-icon="◆">
-                                        <span class="model-icon">◆</span>
+                                    <button class="option" data-value="qwen3-32b" data-icon="■">
+                                        <span class="model-icon">■</span>
                                         <span class="model-name">Qwen 3 32B</span>
                                     </button>
                                 </div>
                                 <div class="dropdown-section">
                                     <span class="section-label">Moonshot</span>
-                                    <button class="option" data-value="kimi-k2" data-icon="◆">
-                                        <span class="model-icon">◆</span>
+                                    <button class="option" data-value="kimi-k2" data-icon="★">
+                                        <span class="model-icon">★</span>
                                         <span class="model-name">Kimi K2</span>
                                     </button>
                                 </div>
